# permit-cpp

./: README.md
.openapi-generator/: FILES
client/: CMakeLists.txt  OAIAPIKeyCreate.cpp  OAIAPIKeyCreate.h  OAIAPIKeyOwnerType.cpp  OAIAPIKeyOwnerType.h  OAIAPIKeyRead.cpp  OAIAPIKeyRead.h  OAIAPIKeyScopeRead.cpp  OAIAPIKeyScopeRead.h  OAIAPIKeysApi.cpp  OAIAPIKeysApi.h  OAIActionBlockEditable.cpp  OAIActionBlockEditable.h  OAIActionBlockRead.cpp  OAIActionBlockRead.h  OAIActionObject.cpp  OAIActionObject.h  OAIActor.cpp  OAIActor.h  OAIAddRolePermissions.cpp  OAIAddRolePermissions.h  OAIAttributeBlockEditable.cpp  OAIAttributeBlockEditable.h  OAIAttributeBlockRead.cpp  OAIAttributeBlockRead.h  OAIAttributeType.cpp  OAIAttributeType.h  OAIAttributes.cpp  OAIAttributes.h  OAIAuditElementsDataApi.cpp  OAIAuditElementsDataApi.h  OAIAuditLog.cpp  OAIAuditLog.h  OAIAuditLogObjects.cpp  OAIAuditLogObjects.h  OAIAuditLogsApi.cpp  OAIAuditLogsApi.h  OAIAuthenticationApi.cpp  OAIAuthenticationApi.h  OAIAuthnMeAPIKeyRead.cpp  (+341 more)
